Added SubModule Again

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,1 +1,3 @@
-
+[submodule "submodules/CoreFlightAnimation"]
+	path = submodules/CoreFlightAnimation
+	url = https://github.com/AntonTheDev/CoreFlightAnimation.git
